fix css on for comparative quote page on mobile (chrome and firefox)

--- a/templates/countrywidedist/css/all.css
+++ b/templates/countrywidedist/css/all.css
@@ -2327,19 +2327,55 @@ and (min-width : 1224px) {
 
 @media screen and (max-width: 768px)  {
     .cfdiv_checkboxgroup label, .cfdiv_radio label {
+        width: 26%;
+    }
+}
+
+@media screen and (max-width: 762px)  {
+    .cfdiv_checkboxgroup label, .cfdiv_radio label {
         width: 39%;
     }
 }
 
 @media screen and (max-width: 650px)  {
     .cfdiv_checkboxgroup label, .cfdiv_radio label {
+        width: 42%;
+    }
+}
+
+@media screen and (max-width: 648px)  {
+    .cfdiv_checkboxgroup label, .cfdiv_radio label {
         width: 39%;
+    }
+}
+
+@media screen and (max-width: 618px)  {
+    .cfdiv_checkboxgroup label, .cfdiv_radio label {
+        width: 39%;
+    }
+}
+
+@media screen and (max-width: 585px)  {
+    .cfdiv_checkboxgroup label, .cfdiv_radio label {
+        width: 39%;
+    }
+}
+
+@media screen and (max-width: 574px)  {
+    .cfdiv_checkboxgroup label, .cfdiv_radio label {
+        width: 42%;
+    }
+}
+
+@media screen and (max-width: 520px)  {
+    .cfdiv_checkboxgroup label, .cfdiv_radio label {
+        width: 41%;
     }
 }
 
 @media screen and (max-width: 512px)  {
     .cfdiv_checkboxgroup label, .cfdiv_radio label {
-        width: 39%;
+        width: 42%;
     }
 }
 
@@ -2351,13 +2387,13 @@ and (min-width : 1224px) {
 
 @media screen and (max-width: 464px)  {
     .cfdiv_checkboxgroup label, .cfdiv_radio label {
-        width: 37%;
+        width: 40%;
     }
 }
 
 @media screen and (max-width: 450px)  {
     .cfdiv_checkboxgroup label, .cfdiv_radio label {
-        width: 37%;
+        width: 40%;
     }
 }
 
@@ -2369,27 +2405,106 @@ and (min-width : 1224px) {
 
 @media screen and (max-width: 406px)  {
     .cfdiv_checkboxgroup label, .cfdiv_radio label {
-        width: 35%;
+        width: 39%;
     }
 }
 
-@media screen and (max-width: 340px)  {
+@media screen and (max-width: 360px)  {
     .cfdiv_checkboxgroup label, .cfdiv_radio label {
-        width: 32%;
+        width: 86%;
     }
 }
 
 @media screen and (max-width: 350px)  {
     .cfdiv_checkboxgroup label, .cfdiv_radio label {
-        width: 32%;
+        width: 86%;
+    }
+}
+
+@media screen and (max-width: 340px)  {
+    .cfdiv_checkboxgroup label, .cfdiv_radio label {
+        width: 86%;
     }
 }
 
 @media screen and (max-width: 326px)  {
     .cfdiv_checkboxgroup label, .cfdiv_radio label {
-        width: 79%;
+        width: 82%;
     }
 }
 
+@media screen and (max-width: 300px)  {
+    .cfdiv_checkboxgroup label, .cfdiv_radio label {
+        width: 74%;
+    }
+}
 
+/* for firefox */
+@-moz-document url-prefix() {
+    @media screen and (max-width: 768px)  {
+        .cfdiv_checkboxgroup label, .cfdiv_radio label {
+            width: 39%;
+        }
+    }
 
+    @media screen and (max-width: 650px)  {
+        .cfdiv_checkboxgroup label, .cfdiv_radio label {
+            width: 39%;
+        }
+    }
+
+    @media screen and (max-width: 512px)  {
+        .cfdiv_checkboxgroup label, .cfdiv_radio label {
+            width: 39%;
+        }
+    }
+
+    @media screen and (max-width: 467px)  {
+        .cfdiv_checkboxgroup label, .cfdiv_radio label {
+            width: 37%;
+        }
+    }
+
+    @media screen and (max-width: 464px)  {
+        .cfdiv_checkboxgroup label, .cfdiv_radio label {
+            width: 37%;
+        }
+    }
+
+    @media screen and (max-width: 450px)  {
+        .cfdiv_checkboxgroup label, .cfdiv_radio label {
+            width: 37%;
+        }
+    }
+
+    @media screen and (max-width: 410px)  {
+        .cfdiv_checkboxgroup label, .cfdiv_radio label {
+            width: 35%;
+        }
+    }
+
+    @media screen and (max-width: 406px)  {
+        .cfdiv_checkboxgroup label, .cfdiv_radio label {
+            width: 35%;
+        }
+    }
+
+    @media screen and (max-width: 340px)  {
+        .cfdiv_checkboxgroup label, .cfdiv_radio label {
+            width: 32%;
+        }
+    }
+
+    @media screen and (max-width: 350px)  {
+        .cfdiv_checkboxgroup label, .cfdiv_radio label {
+            width: 32%;
+        }
+    }
+
+    @media screen and (max-width: 326px)  {
+        .cfdiv_checkboxgroup label, .cfdiv_radio label {
+            width: 79%;
+        }
+    }
+
+}
